--- a/hauiTrash/src/main/resources/application.properties
+++ b/hauiTrash/src/main/resources/application.properties
@@ -1,1 +1,10 @@
 spring.application.name=hauiTrash
+spring.datasource.url=jdbc:mysql://localhost:3306/HauiTrash?useSSL=false&serverTimezone=UTC&characterEncoding=utf8
+spring.datasource.username=root
+spring.datasource.password=123456
+# spring.jpa.hibernate.ddl-auto=update
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQL8Dialect
+
+jwt.secret=THIS_IS_SECRET_KEY_256_ABCXYZ1234567890
+jwt.expiration=86400000
